objects/nitro__Nitro_Profile_Setting__c.object
<CustomObject>
    <description>Nitro profile specific settings</description>
    <fields>
        <fullName>nitro__Criteria__c</fullName>
        <label>Criteria</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__OpportunityStages__c</fullName>
        <label>OpportunityStages</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__actions__c</fullName>
        <label>Actions</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If unchecked, the leaderboard will be hidden from non-editable view.</description>
        <inlineHelpText>Check to display this leaderboard in non-editable view.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__challenges__c</fullName>
        <label>Challenges</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__duration__c</fullName>
        <description>Leaderboard timeframe</description>
        <label>Duration</label>
        <picklist>
            <picklistValues>
                <fullName>for yesterday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>this week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>this month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>this quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>this year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>for all time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>nitro__isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If unchecked, the leaderboard will be hidden from non-editable view.</description>
        <inlineHelpText>To make this leaderboard visible to the users, this checkbox should be checked.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__json_preferences_value__c</fullName>
        <description>the json formatted preference settings specific to pages</description>
        <label>json_preferences_value</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__page_name__c</fullName>
        <description>the name of the current page</description>
        <label>page_name</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__position__c</fullName>
        <description>Leaderboard Layout Position</description>
        <label>Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nitro__preference_name__c</fullName>
        <description>Name of the preference setting</description>
        <externalId>true</externalId>
        <label>preference name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__profile_id__c</fullName>
        <description>the profile/role id</description>
        <label>profile_id</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__roles__c</fullName>
        <label>Roles</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__title__c</fullName>
        <description>leaderboard title</description>
        <label>Title</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biggest Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Nitro Profile Setting</label>
    <listViews>
        <fullName>nitro__All</fullName>
        <columns>nitro__profile_id__c</columns>
        <columns>nitro__preference_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Custom</label>
    </listViews>
    <listViews>
        <fullName>nitro__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nitro Profile Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nitro Profile Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>